# lib-of-cell

./: CMakeLists.txt  README.md  cscope.files  cscope.in.out  cscope.out  cscope.po.out  cscope.sh  cube_.cell  delauny_subdivision.cell  delauny_subdivision3.cell  delauny_subdivision4.cell  delauny_subdivision5.cell  face.off  mesh.frag  mesh.vert  surface.cell  test.ahk
Demo/: main.cpp
include/: Algorithm.h  Cell_Traits.h  Mesh.h  Mesh_IO.h  Mesh_frame.h  Mesh_viewer.h  OpenglAlg.h  _Func_.h  lib_cell_Iterator.h
include/Algorithm/: Algorithm2.h  Harmonic.h
include/Mesh/: Mesh.h  Mesh_Frame.h  _Func_.h  lib_cell_Iterator.h
include/Mesh_IO/: Mesh_IO.h
include/Mesh_view/: Arcroll.h  Mesh_Viewer_data.h  Mesh_viewer.h  OpenglAlg.h  glfw_callback.h
include/tool/: libcell_tools_view.h  tools_cell.h  tools_formats.h  tools_node.h
src/: Algorithm.cpp  Arcroll.c  Arcroll.cpp  CMakeLists.txt  Makefile  Mesh_IO.c  Mesh_IO.cpp  Mesh_Viewer_data.cpp  OpenglAlg.cpp  _Func_.c  _Func_.cpp  glad.c  lib_cell_Iterator.cpp  libcell.cpp  main.cpp
src/Mesh/: Mesh_Frame.c  _Func_.cpp
src/Mesh_IO/: Mesh_IO.cpp
src/tool/: libcell_tools_view.cpp
